# AM-stack

./: CMakeLists.txt  README.md  main.cpp  test_object.stl
src/: slice_extractor.cpp
